# financial-system

./: .gitignore  CMakeLists.example.txt  CMakeLists.txt  Database.cc  Database.h  README.md  argon2_hash.cpp  config.example.json  config.json  hash  hash.cpp  hash_cmd  hash_cmd.cpp  hash_command  hash_command.cpp  main.cc  makefin
.github/workflows/: deploy.yml
controllers/: Dashboard.cc  Dashboard.h  Home.cc  Home.h  Login.cc  Login.h  Logout.cc  Logout.h  Menu.cc  Menu.h  UserController.cc  UserController.h  UserRegister.cc  UserRegister.h
data/: .data.sql.kate-swp  data.example.sql  finsys.sql  install.example.sql  priv.example.sql
filters/: AuthFilter.cc  AuthFilter.h
middlewares/: CsrfMiddleware.h  LoginRateLimitMiddleware.cc  LoginRateLimitMiddleware.h
public/css/: auth.css  form-designer-style.css  form-style.css  inter.css  styles.css
public/js/: login.js  register.js  script.js
test/: CMakeLists.txt
views/: dashboard.csp  dashboard_page.csp  home.csp  login.csp  menu.csp  register_page.csp
